fdo#64495: sw: fix regex search for soft hyphen \xAD

The problem is that the soft hyphen apparently needs special handling,
and SwPaM::DoSearch() looked for the no longer supported legacy syntax,
not for any of the unicode character syntax that ICU regex supports.

Change-Id: I754296d2cf9286242e083cc7906ce3b8fda78dd5